--- a/2.3/docker-compose.yml
+++ b/2.3/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   newrelic:
-    image: athlinksengineering/newrelic
+    image: athlinks/newrelic-sysmond:2.3
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
       - /var/run/docker.sock:/var/run/docker.sock
